# bridge_manual_override_system

./: CMakeLists.txt  README.md
esp_side/: esp32_manager.ino
esp_side/brr/: Motor.cpp  Motor.h  Ultrasonic4.cpp  Ultrasonic4.h  brr.ino  defs.h
include/: app.hpp  connection_manager.hpp  heartbeat.hpp  mainwindow.hpp  state_machine.hpp  types.hpp
src/: app.cpp  connection_manager.cpp  heartbeat.cpp  main.cpp  mainwindow.cpp  state_machine.cpp
